--- a/MyShop/MyShop.WebUI/packages.config
+++ b/MyShop/MyShop.WebUI/packages.config
@@ -39,5 +39,9 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
+  <package id="Unity.Abstractions" version="3.0.0" targetFramework="net452" />
+  <package id="Unity.Container" version="5.5.0" targetFramework="net452" />
+  <package id="Unity.Mvc" version="5.0.10" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
