Added basket and basket items

--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Migrations\201712272122306_Initial.Designer.cs">
       <DependentUpon>201712272122306_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801041612287_AddBasket.cs" />
+    <Compile Include="Migrations\201801041612287_AddBasket.Designer.cs">
+      <DependentUpon>201801041612287_AddBasket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -71,6 +75,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201712272122306_Initial.resx">
       <DependentUpon>201712272122306_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801041612287_AddBasket.resx">
+      <DependentUpon>201801041612287_AddBasket.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
